         #if defined; #if ! defined; #elif defined; #elif !defined; #else;
         #undef; #define (fixes bug #2065518) (Gergely Szasz).
20090304 disk/disk.[ch],machines/specplus3.c: preformat new disks on +3 to
         allow format command on +3 to work  (fixes bug #2602397) (Gergely
         Szasz).
20090306 ui/{gtk,win32}/pokefinder.c: Win32,GTK: Fixed Poke Finder passing the
         wrong page for the possible found location to the debugger (Marek).
20090309 ui/widget/text.c: fix display of widget text entry boxes (Fred).
20090309 ui/widget/options.pl: fixes for widget options when multiple options
         are changes in one session (fixes bug #2673198) (Gergely Szasz).
20090315 ui/widget/{menu.c,widget_internals.h,select.c,widget.c,options.pl},
         ui/gtk/{options-header.pl,options.pl},
         ui/win32/{options-resource.pl,options-header.pl}: add a new "Combo"
         type for options entry, for a selection from a defined list (patch
         #2637346) (Gergely Szasz).
20090329 disk/{beta.c,fdd.[ch],plusd.c},machines/{specplus3.[ch},specplus3e.c},
         menu.h,menu_data.dat,settings.dat,ui.c,ui/gtk/options.pl,
         ui/{options.dat,ui.h},ui/widget/{menu.c,options.pl,widget.[ch]}:
         allow the configuration of the drives attached to the various disk
         interfaces (part of patch #2030341, also resolves feature request
         #1724331) (Gergely Szasz).
20090329 man/fuse.1,fuse.c,settings.dat,ui/fb/fbdisplay.c,ui/svga/svgadisplay.c:
         add support for the full range of bit depths and the full range of
         scalers to the SVGA UI (patch #1745520) (Gergely Szasz).
20090403 ui/wii/{wiimouse.c,wiijoystick.c}: Wii: Added support for 2 controllers
	 (Marek).
20090404 ui/widget/menu.c,ui/wii/{wiimouse.c,wiijoystick.c}: Wii: Added nunchuck
	 support (Marek).
20090404 ui/wii/wiimouse.c: Wii: Swapped the functions of 1 and 2 Wii remote
	 buttons in the menu (Marek).